--- a/www/hire.html
+++ b/www/hire.html
@@ -70,6 +70,12 @@ Company
 Unique Excellence
 </dd>
 <dt>
+Role
+</dt>
+<dd>
+Solution Achitect
+</dd>
+<dt>
 Where
 </dt>
 <dd>
@@ -81,13 +87,17 @@ When
 <dd>
 2022
 </dd>
-<dt>
-Tech
-</dt>
-<dd>
-Google docs, Email, Github, Word (pure consulting role)
-</dd>
 </dl>
+<ul>
+<li>Conducted technical solution diagnostic for remote Aid Posts in
+Papua New Guinea.</li>
+<li>Analyzed current IT systems and recommended pragmatic low-tech paths
+forward to digitize sending and receiving of pharmaceutical
+supplies.</li>
+<li>Worked to develop a proposal for Global Fund to help address issues
+with poor connectivity, slow turn around times, and lack of transparency
+in receiving pharmaceutical supplies.</li>
+</ul>
 <h3 id="remote-water-monitoring">Remote Water Monitoring</h3>
 <dl>
 <dt>
@@ -95,6 +105,12 @@ Company
 </dt>
 <dd>
 Farmbot Monitoring Solutions
+</dd>
+<dt>
+Role
+</dt>
+<dd>
+Software Engineer
 </dd>
 <dt>
 Where
@@ -115,6 +131,12 @@ Tech
 React, Typescript, IndexedDB
 </dd>
 </dl>
+<ul>
+<li>Assisted development team in building features so customers could be
+migrated to new web app.</li>
+<li>Improved performance by migrating client side data to a new
+database.</li>
+</ul>
 <p><br></p>
 <h3 id="supply-chain-traceability-for-livestock">Supply Chain
 Traceability for Livestock</h3>
@@ -124,6 +146,12 @@ Company
 </dt>
 <dd>
 Aglive
+</dd>
+<dt>
+Role
+</dt>
+<dd>
+Tech Lead
 </dd>
 <dt>
 Where
@@ -144,7 +172,17 @@ Tech
 React, Typescript, Node, MongoDB
 </dd>
 </dl>
-<p>Fond memories of this one.</p>
+<ul>
+<li>Led development of blockchain solution to verify Australian black
+Angus beef across the supply chain.</li>
+<li>Led development of IOT device integration to monitor livestock via
+satellite.</li>
+<li>Led deployment of aforementioned system for our first Canadian
+customers.</li>
+<li>Architect for automatic form generation to communicate food and
+treatment status of animals as they move across the value chain.</li>
+<li>Broke down Silos between backend, frontend &amp; business</li>
+</ul>
 <p><br></p>
 <h3 id="web-development-agency">Web Development Agency</h3>
 <dl>
@@ -153,6 +191,12 @@ Company
 </dt>
 <dd>
 Derp Technology (yes, that was really their name…)
+</dd>
+<dt>
+Role
+</dt>
+<dd>
+Software Engineer
 </dd>
 <dt>
 Where
@@ -174,14 +218,15 @@ React, Typescript, AWS, Google Maps
 </dd>
 </dl>
 <ul>
-<li><p>replacing a paid for theme, and in the process replacing 7k lines
-of SASS with 1k lines of CSS and having it look exactly the
-same.</p></li>
-<li><p>introducing typescript to the codebase - first via jsdoc
-comments, and then finally a pretty trivial transformation at the
-end.</p></li>
+<li>replacing a paid for theme, and in the process replacing 7k lines of
+SASS with 1k lines of CSS and having it look exactly the same.</li>
+<li>added strict JSDoc types to JS app, then converted to
+Typescript</li>
+<li>Designed an app that alerted cool store professionals to actionable
+events taking place in their facilities.</li>
+<li>Led development of dashboard solution to monitor ripeness indicators
+for fruit. <br></li>
 </ul>
-<p><br></p>
 <h3 id="election-processing">Election Processing</h3>
 <dl>
 <dt>
@@ -189,6 +234,12 @@ Company
 </dt>
 <dd>
 Election Services
+</dd>
+<dt>
+Role
+</dt>
+<dd>
+Software Engineer
 </dd>
 <dt>
 Where
@@ -211,6 +262,7 @@ C++, Qt, Postgres
 </dl>
 <ul>
 <li>Learned C++ on the job</li>
+<li>Diagnosed memory issues with valgrind</li>
 </ul>
 <p><br></p>
 <h3 id="airport-maintenance-software">Airport Maintenance Software</h3>
@@ -222,31 +274,51 @@ Company
 NovoTech Ltd
 </dd>
 <dt>
+Role
+</dt>
+<dd>
+Software Engineer
+</dd>
+<dt>
 Where
 </dt>
 <dd>
 Auckland Airport, New Zealand
 </dd>
+<dt>
+When
+</dt>
+<dd>
+2014
+</dd>
+<dt>
+Tech
+</dt>
+<dd>
+F#, C#, Excel
+</dd>
 </dl>
+<ul>
+<li>First job. No supervisor, no team and no requirements</li>
+</ul>
 <p>My first time writing software professionally, and it had a huge
 impact on me.</p>
-<p>Finally had my degree, but also had a truck-load of doubts if I could
-be effective in the real world.</p>
-<p>Came in with no team, no supervisor, and no guidelines. And I knocked
-out of the park. It was a real confidence booster.</p>
-<p>Note: I was full of functional fervour at the time, so I wrote it in
-F#. No one there even knew or cared what C# or F# was, they just wanted
-a desktop app.</p>
 <p><br></p>
 <h2 id="employment-history">Employment History</h2>
-<h3 id="livestock-product-manufacturer">Livestock Product
-Manufacturer</h3>
+<h3 id="livestock-product-manufacturing-distribution">Livestock Product
+Manufacturing &amp; Distribution</h3>
 <dl>
 <dt>
 Company
 </dt>
 <dd>
 Allflex Livestock Intelligence
+</dd>
+<dt>
+Role
+</dt>
+<dd>
+Programmer Analyst
 </dd>
 <dt>
 Where
@@ -281,6 +353,12 @@ Company
 Gensolve
 </dd>
 <dt>
+Role
+</dt>
+<dd>
+Software Engineer
+</dd>
+<dt>
 Where
 </dt>
 <dd>
@@ -305,6 +383,7 @@ it an eye opener.</p>
 work I was made red shortly after.</p>
 <hr />
 <h1 id="education">Education</h1>
+<h2 id="certifications">Certifications</h2>
 <dl>
 <dt>
 Quallifcation
@@ -333,12 +412,12 @@ Institution
 Goethe Institut
 </dd>
 </dl>
-<h2 id="self-study">Self study</h2>
+<h2 id="papers">Papers</h2>
 <table>
 <thead>
 <tr>
 <th>
-Paper
+Name
 </th>
 <th>
 Understanding
@@ -348,7 +427,10 @@ Understanding
 <tbody>
 <tr>
 <td>
-<i>An Optimized Conflict-Free Replicated Set<i>
+<i>An Optimized Conflict-Free Replicated Set</i>
+<div>
+(Bieniusa, Zawirski, Preguiça, Shapiro, Baquero, Balegas, Duarte 2012)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="3" />
@@ -357,6 +439,9 @@ Understanding
 <tr>
 <td>
 <i>Viewstamped Replication Revisited</i>
+<div>
+(Liskov, Cowling 2012)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="2" />
@@ -366,6 +451,9 @@ Understanding
 <td>
 <i>Conflict-Free replicated Relations for Multi-Synchronous Database
 Management at Edge</i>
+<div>
+(Yu, Ignat 2020)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="1" />
@@ -383,14 +471,31 @@ Management at Edge</i>
 <td>
 <i>Logical Physical Clocks and Consistent Snapshots in Globally
 Distributed Systems</i>
+<div>
+(Kulkarot, Demirbas, Madeppa, Avva, Leone 2014)
+</div>
 </td>
 <td>
-<meter min="0" max="3" value="1" />
+<meter min="0" max="3" value="2" />
 </td>
 </tr>
 <tr>
 <td>
+<i>A comprehensive study of Convergent and Commutative Replicated Data
+Types</i>
+<div>
+(Shapiro, Preguiça, Baquero, Zawirski 2011)
+</div>
+</td>
+<td>
+<meter min="0" max="3" value="2" />
+</td>
+</tr>
+<td>
 <i>Delta State Replicated Data Types</i>
+<div>
+(Almeida, Shoker, Baquero 2018)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="1" />
@@ -399,6 +504,10 @@ Distributed Systems</i>
 <tr>
 <td>
 <i>Detection of Mutual Inconsistency in Distributed Systems</i>
+<div>
+(Parker, Popek, Rudisin, Stoughton, Walker, Walton, Chow, Edwards,
+Kiser, Kline 1983)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="2" />
@@ -407,6 +516,9 @@ Distributed Systems</i>
 <tr>
 <td>
 <i>Time, Clocks, and the Ordering of Events in a Distributed System</i>
+<div>
+(Lamport 1978)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="2" />
@@ -416,6 +528,9 @@ Distributed Systems</i>
 <td>
 <i>Timestamps in Message-Passing Systems That Preserve the Partial
 Ordering</i>
+<div>
+(Fidge 1988)
+</div>
 </td>
 <td>
 <meter min="0" max="3" value="2" />
