put role first in all my job summaries, shorter top summary, fixed unique solutions summary

--- a/www/hire.html
+++ b/www/hire.html
@@ -47,33 +47,33 @@
 real world problems, reliably and quickly.</p>
 <p>My career has centered on capturing and managing data across the
 supply chain. The challenges of doing this in the field - where
-connectivity cannot be assumed - has been an enduring motivation in my
-study of distributed systems.</p>
+connectivity cannot be assumed - has been an enduring interest of
+mine.</p>
 <hr />
 <h1 id="professional-experience">Professional Experience</h1>
 <h2 id="summary">Summary</h2>
 <ul>
-<li>Coded in a wide variety of paradigms, from functional programming to
-systems programming</li>
-<li>Deployed backend, frontend, and desktop software</li>
-<li>Solved challanges using document databases, relational databases and
-key-value stores</li>
+<li>Developed in many paradigms, from functional programming to systems
+programming.</li>
+<li>Deployed backend, frontend, and desktop software.</li>
+<li>Modelled data using document databases, relational databases and
+key-value stores.</li>
 <li>Senior work as a Technical Lead and Solutions Architect.</li>
 </ul>
 <h2 id="past-clients">Past Clients</h2>
 <h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Unique Excellence
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Solution Achitect
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Unique Excellence
 </dd>
 <dt>
 Where
@@ -89,28 +89,25 @@ When
 </dd>
 </dl>
 <ul>
-<li>Conducted technical solution diagnostic for remote Aid Posts in
-Papua New Guinea.</li>
-<li>Analyzed current IT systems and recommended pragmatic low-tech paths
-forward to digitize sending and receiving of pharmaceutical
-supplies.</li>
-<li>Worked to develop a proposal for Global Fund to help address issues
-with poor connectivity, slow turn around times, and lack of transparency
-in receiving pharmaceutical supplies.</li>
+<li>Developed a technical solution diagnostic for “Aid Posts” in remote
+regions of PNG, analyzing current processes and software solutions,</li>
+<li>Solution took into account challenging ground conditions, including
+poor connectivity, slow turnaround times, and lack of transparency.</li>
+<li>Delivered technical component of proposal to Global Fund.</li>
 </ul>
 <h3 id="remote-water-monitoring">Remote Water Monitoring</h3>
 <dl>
-<dt>
-Company
-</dt>
-<dd>
-Farmbot Monitoring Solutions
-</dd>
 <dt>
 Role
 </dt>
 <dd>
 Software Engineer
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Farmbot Monitoring Solutions
 </dd>
 <dt>
 Where
@@ -142,16 +139,16 @@ database.</li>
 Traceability for Livestock</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Aglive
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Tech Lead
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Aglive
 </dd>
 <dt>
 Where
@@ -187,16 +184,16 @@ treatment status of animals as they move across the value chain.</li>
 <h3 id="web-development-agency">Web Development Agency</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Derp Technology (yes, that was really their name…)
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Software Engineer
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Derp Technology (yes, that was really their name…)
 </dd>
 <dt>
 Where
@@ -230,16 +227,16 @@ for fruit. <br></li>
 <h3 id="election-processing">Election Processing</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Election Services
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Software Engineer
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Election Services
 </dd>
 <dt>
 Where
@@ -268,16 +265,16 @@ C++, Qt, Postgres
 <h3 id="airport-maintenance-software">Airport Maintenance Software</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-NovoTech Ltd
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Software Engineer
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+NovoTech Ltd
 </dd>
 <dt>
 Where
@@ -309,16 +306,16 @@ impact on me.</p>
 Manufacturing &amp; Distribution</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Allflex Livestock Intelligence
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Programmer Analyst
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Allflex Livestock Intelligence
 </dd>
 <dt>
 Where
@@ -347,16 +344,16 @@ down, and two factories stopped functioning.</p>
 <h3 id="practice-management-software">Practice Management Software</h3>
 <dl>
 <dt>
-Company
-</dt>
-<dd>
-Gensolve
-</dd>
-<dt>
 Role
 </dt>
 <dd>
 Software Engineer
+</dd>
+<dt>
+Company
+</dt>
+<dd>
+Gensolve
 </dd>
 <dt>
 Where
