Aglive experience looking good

--- a/www/hire.html
+++ b/www/hire.html
@@ -170,15 +170,15 @@ React, Typescript, Node, MongoDB
 </dd>
 </dl>
 <ul>
-<li>Led development of blockchain solution to verify Australian black
-Angus beef across the supply chain.</li>
-<li>Led development of IOT device integration to monitor livestock via
-satellite.</li>
-<li>Led deployment of aforementioned system for our first Canadian
-customers.</li>
-<li>Architect for automatic form generation to communicate food and
-treatment status of animals as they move across the value chain.</li>
-<li>Broke down Silos between backend, frontend &amp; business</li>
+<li>Led the integration of IoT devices for satellite-based livestock
+monitoring, securing the company’s first customers in Canada.</li>
+<li>Led the development of an end-to-end demo for Telstra, Australia’s
+largest telecommunications company.</li>
+<li>Managed the project for a blockchain solution, ensuring the
+verification of Australian black Angus beef across the supply
+chain.</li>
+<li>Provided training to the team in TypeScript and object-oriented
+design.</li>
 </ul>
 <p><br></p>
 <h3 id="web-development-agency">Web Development Agency</h3>
@@ -409,7 +409,9 @@ Institution
 Goethe Institut
 </dd>
 </dl>
-<h2 id="papers">Papers</h2>
+<h2 id="distributed-system-papers">Distributed System Papers</h2>
+<p>I’m a firm believer in contiual education. I’d be delighted to
+discuss any of the below!</p>
 <table>
 <thead>
 <tr>
