--- a/www/hire.html
+++ b/www/hire.html
@@ -174,10 +174,9 @@ React, Typescript, Node, MongoDB
 monitoring, securing the company’s first customers in Canada.</li>
 <li>Led the development of an end-to-end demo for Telstra, Australia’s
 largest telecommunications company.</li>
-<li>Managed the project for a blockchain solution, ensuring the
-verification of Australian black Angus beef across the supply
-chain.</li>
-<li>Provided training to the team in TypeScript and object-oriented
+<li>Project manager for end-to-end verification of high-end Australian
+beef from farm to fork.</li>
+<li>Provided training to the team in TypeScript and Object-Oriented
 design.</li>
 </ul>
 <p><br></p>
@@ -215,15 +214,16 @@ React, Typescript, AWS, Google Maps
 </dd>
 </dl>
 <ul>
-<li>replacing a paid for theme, and in the process replacing 7k lines of
-SASS with 1k lines of CSS and having it look exactly the same.</li>
-<li>added strict JSDoc types to JS app, then converted to
-Typescript</li>
-<li>Designed an app that alerted cool store professionals to actionable
-events taking place in their facilities.</li>
-<li>Led development of dashboard solution to monitor ripeness indicators
-for fruit. <br></li>
+<li>Developed notification system to alert cool store professionals of
+actionable events relating to atmospheric conditions.</li>
+<li>Migrated Javascript app to strictly-checked Typescript, by way of
+JSDoc annotations.</li>
+<li>Replaced paid theme (7k lines of SASS) with 1k lines of CSS without
+changing appearance.</li>
+<li>Developed MVP for a geofilter application, leveraging the Google
+Maps API.</li>
 </ul>
+<p><br></p>
 <h3 id="election-processing">Election Processing</h3>
 <dl>
 <dt>
@@ -258,6 +258,8 @@ C++, Qt, Postgres
 </dd>
 </dl>
 <ul>
+<li>Updated legacy system to prepare for the 2016 local government
+elections.</li>
 <li>Learned C++ on the job</li>
 <li>Diagnosed memory issues with valgrind</li>
 </ul>
@@ -296,11 +298,13 @@ F#, C#, Excel
 </dd>
 </dl>
 <ul>
-<li>First job. No supervisor, no team and no requirements</li>
+<li>First job out of university.</li>
+<li>Independently developed a work and parts scheduling application for
+maintenance crews at the Engineering &amp; Emergency Services
+department, with no supervisor, project manager, or predefined
+requirements.</li>
+<li>Delivered ahead of schedule. <br></li>
 </ul>
-<p>My first time writing software professionally, and it had a huge
-impact on me.</p>
-<p><br></p>
 <h2 id="employment-history">Employment History</h2>
 <h3 id="livestock-product-manufacturing-distribution">Livestock Product
 Manufacturing &amp; Distribution</h3>
