--- a/www/hire.html
+++ b/www/hire.html
@@ -298,11 +298,10 @@ F#, C#, Excel
 </dd>
 </dl>
 <ul>
-<li>First job out of university.</li>
-<li>Independently developed a work and parts scheduling application for
-maintenance crews at the Engineering &amp; Emergency Services
-department, with no supervisor, project manager, or predefined
-requirements.</li>
+<li>Developed work and parts scheduling app for maintenance crews at the
+Engineering &amp; Emergency Services department.</li>
+<li>First job out of university. No supervisor, project manager, or
+predefined requirements.</li>
 <li>Delivered ahead of schedule. <br></li>
 </ul>
 <h2 id="employment-history">Employment History</h2>
@@ -337,13 +336,23 @@ When
 Tech
 </dt>
 <dd>
-C#, ASP.NET, SQL Server, Dyanmics GP (don’t ask)
+C#, ASP.NET, SQL Server, Dynamics GP
 </dd>
 </dl>
-<p>Biggest legacy system I’d worked on to date.</p>
-<p>I learned the value of keeping a system running - our software went
-down, and two factories stopped functioning.</p>
-<p>Exposed to a vertical slice of the whole supply chain</p>
+<ul>
+<li>Second-in-command for IT across Australasia</li>
+<li>Maintained critical legacy system, where any downtime could halt
+production at multiple factories.</li>
+<li>Led development of new order processing API for our largest
+client.</li>
+<li>Authored comprehensive business process documentation for
+factories.</li>
+<li>Close collaboration with Customer Service and Production departments
+to handle new products and increased demand.</li>
+<li>Gained end-to-end supply chain insights by working on a system
+tracking order processing, job scheduling, production, quality control,
+and dispatch.</li>
+</ul>
 <p><br></p>
 <h3 id="practice-management-software">Practice Management Software</h3>
 <dl>
@@ -375,13 +384,14 @@ When
 Tech
 </dt>
 <dd>
-C#, Oracle Database
+C#, Oracle Database, SVN (yes, that’s right)
 </dd>
 </dl>
-<p>This was the first time I saw real life legacy software, and wow was
-it an eye opener.</p>
-<p>They ended up closing the local office, and after a stint of remote
-work I was made red shortly after.</p>
+<ul>
+<li>Part of global team doing server side maintenace programming.</li>
+<li>Worked directly with customers to implement features and resolve
+issues.</li>
+</ul>
 <hr />
 <h1 id="education">Education</h1>
 <h2 id="certifications">Certifications</h2>
