CV looking smaller, and more printable

--- a/www/hire.html
+++ b/www/hire.html
@@ -27,7 +27,7 @@
 			property="og:description" 
 			content="Software consultant, specialising in livestock traceability and agricultural logistics."
 		/>
-		<title>Hire Lewis Campbell</title>
+		<title>Lewis Campbell</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
 	</head>
@@ -61,33 +61,22 @@ key-value stores.</li>
 <li>Senior work as a Technical Lead and Solutions Architect.</li>
 </ul>
 <h2 id="past-clients">Past Clients</h2>
-<h3 id="supply-chain-consulting">Supply Chain Consulting</h3>
+<!--
 <dl>
-<dt>
-Role
-</dt>
-<dd>
-Solution Achitect
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Unique Excellence
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2022
-</dd>
+  <dt>Role</dt>
+  <dd>Solution Achitect</dd>
+  <dt>Company</dt>
+  <dd>Unique Excellence</dd>
+  <dt>Where</dt>
+  <dd>Australia (Remote)</dd>
+  <dt>When</dt>
+  <dd>2022</dd>
 </dl>
+-->
+<h3
+id="solution-architect-unique-excellence-supply-chain-consulting">Solution
+Architect @ Unique Excellence (Supply Chain Consulting)</h3>
+<p><em>Australia (Remote) ⋄ 2022</em></p>
 <ul>
 <li>Developed a technical solution diagnostic for “Aid Posts” in remote
 regions of PNG, analyzing current processes and software solutions,</li>
@@ -95,39 +84,11 @@ regions of PNG, analyzing current processes and software solutions,</li>
 poor connectivity, slow turnaround times, and lack of transparency.</li>
 <li>Delivered technical component of proposal to Global Fund.</li>
 </ul>
-<h3 id="remote-water-monitoring">Remote Water Monitoring</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Software Engineer
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Farmbot Monitoring Solutions
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2022
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, IndexedDB
-</dd>
-</dl>
+<p><br></p>
+<h3
+id="software-engineer-farmbot-monitoring-solutions-remote-water-monitoring">Software
+Engineer @ Farmbot Monitoring Solutions (Remote Water Monitoring)</h3>
+<p><em>Australia (Remote) ⋄ 2021-2023</em></p>
 <ul>
 <li>Assisted development team in building features so customers could be
 migrated to new web app.</li>
@@ -135,40 +96,10 @@ migrated to new web app.</li>
 database.</li>
 </ul>
 <p><br></p>
-<h3 id="supply-chain-traceability-for-livestock">Supply Chain
-Traceability for Livestock</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Tech Lead
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Aglive
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Australia (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2020-2021
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, Node, MongoDB
-</dd>
-</dl>
+<h3
+id="technical-lead-aglive-supply-chain-traceability-for-livestock">Technical
+Lead @ Aglive (Supply Chain Traceability for Livestock)</h3>
+<p><em>Australia (Remote) ⋄ 2020-2021</em></p>
 <ul>
 <li>Led the integration of IoT devices for satellite-based livestock
 monitoring, securing the company’s first customers in Canada.</li>
@@ -180,39 +111,10 @@ beef from farm to fork.</li>
 design.</li>
 </ul>
 <p><br></p>
-<h3 id="web-development-agency">Web Development Agency</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Software Engineer
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Derp Technology (yes, that was really their name…)
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-New Zealand (Remote)
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2020
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-React, Typescript, AWS, Google Maps
-</dd>
-</dl>
+<h3
+id="software-engineer-derp-technologies-ltd-web-development-agency">Software
+Engineer @ Derp Technologies Ltd (Web Development Agency)</h3>
+<p><em>New Zealand (Remote) ⋄ 2020</em></p>
 <ul>
 <li>Developed notification system to alert cool store professionals of
 actionable events relating to atmospheric conditions.</li>
@@ -224,39 +126,9 @@ changing appearance.</li>
 Maps API.</li>
 </ul>
 <p><br></p>
-<h3 id="election-processing">Election Processing</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Software Engineer
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Election Services
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Auckland, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014-2015
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C++, Qt, Postgres
-</dd>
-</dl>
+<h3 id="software-engineer-election-services">Software Engineer @
+Election Services</h3>
+<p><em>Auckland, New Zealand ⋄ 2020</em></p>
 <ul>
 <li>Updated legacy system to prepare for the 2016 local government
 elections.</li>
@@ -264,39 +136,10 @@ elections.</li>
 <li>Diagnosed memory issues with valgrind</li>
 </ul>
 <p><br></p>
-<h3 id="airport-maintenance-software">Airport Maintenance Software</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Software Engineer
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-NovoTech Ltd
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Auckland Airport, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-F#, C#, Excel
-</dd>
-</dl>
+<h3
+id="software-engineer-novotech-ltd-airport-maintenance-software">Software
+Engineer @ NovoTech Ltd (Airport Maintenance Software)</h3>
+<p><em>Auckland Airport, New Zealand ⋄ 2014</em></p>
 <ul>
 <li>Developed work and parts scheduling app for maintenance crews at the
 Engineering &amp; Emergency Services department.</li>
@@ -305,42 +148,13 @@ predefined requirements.</li>
 <li>Delivered ahead of schedule. <br></li>
 </ul>
 <h2 id="employment-history">Employment History</h2>
-<h3 id="livestock-product-manufacturing-distribution">Livestock Product
-Manufacturing &amp; Distribution</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Programmer Analyst
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Allflex Livestock Intelligence
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Palmerston North, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2016-2020
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C#, ASP.NET, SQL Server, Dynamics GP
-</dd>
-</dl>
+<h3
+id="programmer-analyst-allflex-livestock-intelligence-manufacturing-distribution">Programmer
+Analyst @ Allflex Livestock Intelligence (Manufacturing &amp;
+Distribution)</h3>
+<p><em>Palmerston North, New Zealand ⋄ 2016-2020</em></p>
 <ul>
-<li>Second-in-command for IT across Australasia</li>
+<li>Second-in-command for IT across Australasia.</li>
 <li>Maintained critical legacy system, where any downtime could halt
 production at multiple factories.</li>
 <li>Led development of new order processing API for our largest
@@ -355,38 +169,7 @@ and dispatch.</li>
 </ul>
 <p><br></p>
 <h3 id="practice-management-software">Practice Management Software</h3>
-<dl>
-<dt>
-Role
-</dt>
-<dd>
-Software Engineer
-</dd>
-<dt>
-Company
-</dt>
-<dd>
-Gensolve
-</dd>
-<dt>
-Where
-</dt>
-<dd>
-Wellington, New Zealand
-</dd>
-<dt>
-When
-</dt>
-<dd>
-2014-2015 (Office closed)
-</dd>
-<dt>
-Tech
-</dt>
-<dd>
-C#, Oracle Database, SVN (yes, that’s right)
-</dd>
-</dl>
+<p><em>Wellington, New Zealand ⋄ 2014-2015 (Office closed</em></p>
 <ul>
 <li>Part of global team doing server side maintenace programming.</li>
 <li>Worked directly with customers to implement features and resolve
@@ -432,13 +215,10 @@ discuss any of the below!</p>
 <th>
 Name
 </th>
-<th>
-Understanding
-</th>
-</tr>
-</thead>
+<pre><code>        &lt;th&gt;Understanding&lt;/th&gt; &lt;/tr&gt;
+&lt;/thead&gt;</code></pre>
 <tbody>
-<tr>
+&lt;tr)&gt;
 <td>
 <i>An Optimized Conflict-Free Replicated Set</i>
 <div>
