changing the name of 'input' directory to 'static', much clearer

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
 			property="og:description" 
 			content="Software consultant, specialising in livestock traceability and agricultural logistics."
 		/>
-		<title></title>
+		<title>Lewis Campbell Technologies</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
 		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
 	</head>
