working on my tags

--- a/static/template.html
+++ b/static/template.html
@@ -12,7 +12,7 @@
 		</script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="description" content="Software consultant, specialising in livestock traceability and agricultural logistics.">
+		<meta name="description" content=$description$>
 		<meta charset="UTF-8">
 		<!-- Open Graph tags for sharing links -->
 		<meta 
@@ -25,7 +25,11 @@
 		/>
 		<meta 
 			property="og:description" 
-			content="Software consultant, specialising in livestock traceability and agricultural logistics."
+			content="$description$"
+		/>
+		<meta
+			property="og:type"
+			content="$type$"
 		/>
 		<title>$title$</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
