--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,8 @@
 		/>
 		<meta 
 			property="og:description" 
-			content="Software consultant, specialising in livestock traceability and agricultural logistics."
+			content="Want your app to work for customers in remote regions? Find out
+how my services can help your app perform offline and off the grid."
 		/>
 		<title>Lewis Campbell Technologies</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
