--- a/www/projects.html
+++ b/www/projects.html
@@ -25,7 +25,7 @@
 		/>
 		<meta 
 			property="og:description" 
-			content="Software consultant, specialising in livestock traceability and agricultural logistics."
+			content=""
 		/>
 		<title>Projects</title>
 		<link rel="stylesheet" type="text/css" href="/style.css">
