--- a/www/landing.html
+++ b/www/landing.html
@@ -32,7 +32,7 @@
 		<meta charset="UTF-8">
 
 		<title>Lewis Campbell Technologies</title>
-		<link rel="stylesheet" type="text/css" href="new.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="manifest" href="manifest.json">
 		<link rel="apple-touch-icon" href="img/hashed/icon192-4295d06a36017a35.webp">
 
