--- a/www/talks.html
+++ b/www/talks.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-36WVV4ZMPV"></script>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVVNR2QNZ7">	</script>
 		<script>
+		  if ("serviceWorker" in navigator) {
+	      navigator.serviceWorker.register("/sw.js", {scope: "/",})
+	      	.then(registration => {
+	      		if (registration.installing) {
+			        console.log("Service worker installing");
+			      } else if (registration.waiting) {
+			        console.log("Service worker installed");
+			      } else if (registration.active) {
+			        console.log("Service worker active");
+			      }
+	      	})
+	      	.catch(error => console.error(`Registration failed with `))
+	      }
+
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
 
-		  gtag('config', 'G-36WVV4ZMPV');
+		  gtag('config', 'G-YVVNR2QNZ7');
 		</script>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="description" content="Software consultant, specialising in livestock traceability and agricultural logistics.">
 		<meta charset="UTF-8">
+		<meta name="description" content=>
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
@@ -27,21 +42,56 @@
 			property="og:description" 
 			content=""
 		/>
+		<meta
+			property="og:type"
+			content=""
+		/>
 		<title>Talks</title>
-		<link rel="stylesheet" type="text/css" href="/style.css">
-		<link rel="shortcut icon" type="image/png" href="/img/icon/icon32.png"/>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="manifest" href="manifest.json">
+		<link rel="apple-touch-icon" href="img/hashed/icon192-4295d06a36017a35.webp">
+
+		<link rel="shortcut icon" type="image/png" href="img/hashed/icon32-a2fbcf30da694fcf.webp"/>
+		<meta name="theme-color" content="#80D4FF"/>
 	</head>
+
 	<body>
 		<nav>
-			<a href="/" id="home"><img src="/img/icon/icon46.webp" alt="ᛚᚳ"/></a>
+			<a href="/" id="home" aria-label="Home Page">
+				<img
+					src="img/hashed/icon46-112e6420dd915aad.webp"
+					alt="Lewis Campbell Technologies Logo">
+				</img>
+
+			</a>
 			<span id="links">
-				<a href="/hire.html">Hire</a>
-				<a href="/contact.html">Contact</a>
-				<a href="/projects.html">Projects</a>
-				<a href="/talks.html">Talks</a>
+				<a
+					href="https://twitter.com/LewisCTech"
+					aria-label="Twitter"
+				>
+					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
+				</a>
+				<a 
+					href="https://www.linkedin.com/in/lewisandrewcampbell"
+					aria-label="LinkedIn"
+				>
+					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+				</a>
+				<a
+					href=https://www.youtube.com/@LewisCampbellTech
+					aria-label="YouTube"
+				>
+					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
+				</a>
+				<a
+					href="https://github.com/LAC-Tech"
+					aria-label="GitHub"
+				>
+					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
+				</a>
 			</span>
 		</nav>
-    <main>
+		<main>
 			<h1 id="talks">Talks</h1>
 <p><a href="https://youtu.be/NfzicLsgjl4">Biggest Technical Mistakes B2B
 Companies make.</a></p>
@@ -50,7 +100,10 @@ Companies make.</a></p>
 <p><a href="https://youtu.be/kCmOfRcmkN0">Gettin’ Ziggy Wit It - Why I
 am convinced Zig is the C successor we’ve been waiting for</a></p>
 <iframe width="420" height="315" src="https://youtu.be/&gt;kCmOfRcmkN0">
-</iframe>     
+</iframe>
 		</main>
+		<footer>
+			© 2023 Lewis Campbell Technologies Ltd.
+		</footer>
 	</body>
 </html>
