makefile now handles the 'special case' of the index page, and uses landing page template. TODO: the inclusion has some issues

--- a/www/index.html
+++ b/www/index.html
@@ -28,9 +28,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta charset="UTF-8">
-		<meta name="description" content=Want your app to work for customers in
-remote regions? Find out how my services can help your app perform
-offline and off the grid.>
+		<meta name="description" content=>
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
@@ -42,14 +40,13 @@ offline and off the grid.>
 		/>
 		<meta 
 			property="og:description" 
-			content="Want your app to work for customers in remote regions? Find out
-how my services can help your app perform offline and off the grid."
+			content=""
 		/>
 		<meta
 			property="og:type"
-			content="website"
+			content=""
 		/>
-		<title>Lewis Campbell Technologies</title>
+		<title></title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="manifest" href="manifest.json">
 		<link rel="apple-touch-icon" href="img/hashed/icon192-4295d06a36017a35.webp">
@@ -65,7 +62,6 @@ how my services can help your app perform offline and off the grid."
 					src="img/hashed/icon46-112e6420dd915aad.webp"
 					alt="Lewis Campbell Technologies Logo">
 				</img>
-
 			</a>
 			<span id="links">
 				<a
@@ -95,8 +91,123 @@ how my services can help your app perform offline and off the grid."
 			</span>
 		</nav>
 		<main>
-			<h1 id="lewis-campbell">Lewis Campbell</h1>
-<p>Welcome to my corner of the internet.</p>
+			<div id="hero">
+<h1 id="software-at-the-edge-of-the-supply-chain.">Software at the
+<span>edge</span> of the supply chain.</h1>
+<div>
+<a href="#contact" id="cta">Get in touch</a> <a href="#benefits"
+id="scroll-prompt">Find out more ▼</a>
+</div>
+</div>
+<div id="benefits">
+<div>
+<h2 id="pragmatic-solutions">🛠️ Pragmatic Solutions</h2>
+<p>I'm not here to push a specific tech stack or vendor.</p>
+<p>Get realistic solutions to solve the problem as simply as we can.</p>
+<h2 id="supply-chain-strength">💪 Supply Chain Strength</h2>
+<p>Low-tech users? Field deployments? No network? No problem.</p>
+<p>When standard solutions fall short, I step up.</p>
+<h2 id="collaborative-approach">🤝 Collaborative Approach</h2>
+<p>Technology is only part of the picture.</p>
+<p>Collaboration across departments is the key to success.</p>
+</div>
+</div>
+<div id="services">
+<div class="service">
+<img src="img/tabler-code.svg" alt="&lt;/&gt;" />
+<h2 id="software-development">Software Development</h2>
+<ul>
+<li>Offline and sync strategies.</li>
+<li>Data modelling in relational, document and key value stores.</li>
+<li>Experienced in backend, frontend and desktop.</li>
+</ul>
+</div>
+<div class="service">
+<img src="img/tabler-report-analytics.svg"
+alt="clipboard with bar chart" />
+<h2 id="consulting">Consulting</h2>
+<ul>
+<li>Full technical assessment of existing solutions.</li>
+<li>Expert advice on remote and low-connectivity deployments.</li>
+</ul>
+</div>
+<div class="service">
+<img src="img/tabler-tie.svg" alt="necktie" />
+<h2 id="technical-leadership">Technical Leadership</h2>
+<ul>
+<li>Track record delivering commercially critical projects.</li>
+<li>Experienced in leading remote teams.</li>
+<li>Pro-active mentoring of juniors.</li>
+</ul>
+</div>
+</div>
+<div id="about">
+<h1 id="about-me">About Me</h1>
+<div>
+<section>
+<p>I've been a freelance consultant since 2020, after a career
+developing software for industries such as airport services,
+agriculture. and supply chain management.</p>
+<p>I live in a small village on the west coast with my wife and
+daughter, enjoying life between the mountains and the pacific.</p>
+</section>
+<img src="/img/me_2022.webp"
+alt="Me sitting on my office chair with blue tie, in 2022" />
+</div>
+</div>
+<div id="test">
+<h1 id="previous-clients">Previous Clients</h1>
+<div id="testimonials">
+<h2 id="mark-toohey"><a
+href="https://www.linkedin.com/in/marktooheylawyer/">Mark
+Toohey</a></h2>
+<span>Executive Director @ Aglive Group Limited</span> <img
+src="/img/mark-toohey.webp" alt="Mark Toohey" />
+<blockquote>
+<p>❝ Lewis is very willing and responsive co-worker. He has great
+experience in AgTech projects and is always keen to tackle new tasks -
+even the challenging ones. We were very impressed with his willingness
+to mentor and train junior staff and he showed great initiative in doing
+this important task. Lewis would make a good addition to any team.❞</p>
+</blockquote>
+<h2 id="micha-veen"><a
+href="https://www.linkedin.com/in/michaveen/">Micha Veen</a></h2>
+<span>MD &amp; Founder @ Unique Excellence</span> <img
+src="/img/micha-veen.webp" alt="Micha Veen" />
+<blockquote>
+<p>❝ Lewis is a pragmatic IT professional that is very easy to work
+with. We conducted a business and technical solution diagnostic for the
+Papua New Guinea Health Product Supply Chain and assisted to understand
+the current technical gaps and potential practical tech-solutions that
+we could introduce in a tech-constricted country.</p>
+<p>His collaborative approach and work ethics is immaculate and created
+a very easy work environment. He goes out of his way when you ask for
+some help and guidance.</p>
+<p>Lewis, thanks for your support and insights, as you made it very easy
+for us to create a operational, supply chain and aligned technical
+roadmap for the PNG project, allowing us to get to the next stage of
+this exciting supply chain management project.❞</p>
+</blockquote>
+<h2 id="bramford-horton"><a
+href="https://www.linkedin.com/in/bramford-horton-a7381938/">Bramford
+Horton</a></h2>
+<span>Director @ Derp Technologies</span> <img
+src="/img/bramford-horton.webp" alt="Bramford Horton" />
+<blockquote>
+<p>❝ Lewis works with Derp Technologies as a Frontend Web Development
+Consultant. Throughout our time working together, Lewis has produced
+quality software and solutions to meet the Web UI requirements of our
+clients and their end-users. Lewis communicates clearly and works
+diligently to deliver great results.❞</p>
+</blockquote>
+</div>
+</div>
+<div id="contact">
+<h1 id="find-out-how-i-can-help">Find out how I can help</h1>
+<span class="social"> <img src="img/tabler-mail.svg" alt="mail" /> <a
+href="mailto:info@lewiscampbell.tech">info@lewiscampbell.tech</a>
+</span>
+</div>
 		</main>
 		<footer>
 			© 2023 Lewis Campbell Technologies Ltd.
