including metadata for title

--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
 			property="og:type"
 			content=""
 		/>
-		<title></title>
+		<title>Lewis Campbell Technologies</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="manifest" href="manifest.json">
 		<link rel="apple-touch-icon" href="img/hashed/icon192-4295d06a36017a35.webp">
