moved landing page files into own folder so they don't create 'landing.html'

--- a/www/contact.html
+++ b/www/contact.html
@@ -64,6 +64,20 @@
 				</img>
 			</a>
 			<span id="links">
+				<a href="/talks.html">Talks</a>
+				<a href="/projects.html">Projects</a>
+			</span>
+		</nav>
+		<main>
+			<h1>Get in touch</h1>
+<p>Email me at <a href="mailto:info@lewiscampbell.tech">info@lewiscampbell.tech</a></p>
+<h2>Social Media</h2>
+<p><a href="https://twitter.com/LewisCTech">Twitter</a></p>
+<p><a href="https://www.linkedin.com/in/lewisandrewcampbell/">LinkedIn</a></p>
+
+		</main>
+		<footer>
+			<span>
 				<a
 					href="https://twitter.com/LewisCTech"
 					aria-label="Twitter"
@@ -89,16 +103,6 @@
 					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
 				</a>
 			</span>
-		</nav>
-		<main>
-        <h1>Get in touch</h1>
-<p>Email me at <a href="mailto:info@lewiscampbell.tech">info@lewiscampbell.tech</a></p>
-<h2>Social Media</h2>
-<p><a href="https://twitter.com/LewisCTech">Twitter</a></p>
-<p><a href="https://www.linkedin.com/in/lewisandrewcampbell/">LinkedIn</a></p>
-
-		</main>
-		<footer>
 			© 2023 Lewis Campbell Technologies Ltd.
 		</footer>
 	</body>
