--- a/www/hire.html
+++ b/www/hire.html
@@ -64,34 +64,12 @@
 				</img>
 			</a>
 			<span id="links">
-				<a
-					href="https://twitter.com/LewisCTech"
-					aria-label="Twitter"
-				>
-					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
-				</a>
-				<a 
-					href="https://www.linkedin.com/in/lewisandrewcampbell"
-					aria-label="LinkedIn"
-				>
-					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
-				</a>
-				<a
-					href=https://www.youtube.com/@LewisCampbellTech
-					aria-label="YouTube"
-				>
-					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
-				</a>
-				<a
-					href="https://github.com/LAC-Tech"
-					aria-label="GitHub"
-				>
-					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
-				</a>
+				<a href="/talks.html">Talks</a>
+				<a href="/projects.html">Projects</a>
 			</span>
 		</nav>
 		<main>
-        <h1>Objective</h1>
+			<h1>Objective</h1>
 <p>To work with smart, driven people on distributed systems that solve real world problems, reliably and quickly.</p>
 <p>My career has centered on capturing and managing data across the supply chain. The challenges of doing this in the field - where connectivity cannot be assumed - has been an enduring interest of mine.</p>
 <hr>
@@ -207,6 +185,32 @@
 
 		</main>
 		<footer>
+			<span>
+				<a
+					href="https://twitter.com/LewisCTech"
+					aria-label="Twitter"
+				>
+					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
+				</a>
+				<a 
+					href="https://www.linkedin.com/in/lewisandrewcampbell"
+					aria-label="LinkedIn"
+				>
+					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+				</a>
+				<a
+					href=https://www.youtube.com/@LewisCampbellTech
+					aria-label="YouTube"
+				>
+					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
+				</a>
+				<a
+					href="https://github.com/LAC-Tech"
+					aria-label="GitHub"
+				>
+					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
+				</a>
+			</span>
 			© 2023 Lewis Campbell Technologies Ltd.
 		</footer>
 	</body>
