--- a/www/talks.html
+++ b/www/talks.html
@@ -64,6 +64,23 @@
 				</img>
 			</a>
 			<span id="links">
+				<a href="/talks.html">Talks</a>
+				<a href="/projects.html">Projects</a>
+			</span>
+		</nav>
+		<main>
+			<h1>Talks</h1>
+<p><a href="https://youtu.be/NfzicLsgjl4">Biggest Technical Mistakes B2B Companies make.</a></p>
+<iframe width="420" height="315" src="https://youtu.be/NfzicLsgjl4">
+</iframe>
+
+<p><a href="https://youtu.be/kCmOfRcmkN0">Gettin&#39; Ziggy Wit It - Why I am convinced Zig is the C successor we&#39;ve been waiting for</a></p>
+<iframe width="420" height="315" src="https://youtu.be/>kCmOfRcmkN0">
+</iframe>
+
+		</main>
+		<footer>
+			<span>
 				<a
 					href="https://twitter.com/LewisCTech"
 					aria-label="Twitter"
@@ -89,19 +106,6 @@
 					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
 				</a>
 			</span>
-		</nav>
-		<main>
-        <h1>Talks</h1>
-<p><a href="https://youtu.be/NfzicLsgjl4">Biggest Technical Mistakes B2B Companies make.</a></p>
-<iframe width="420" height="315" src="https://youtu.be/NfzicLsgjl4">
-</iframe>
-
-<p><a href="https://youtu.be/kCmOfRcmkN0">Gettin&#39; Ziggy Wit It - Why I am convinced Zig is the C successor we&#39;ve been waiting for</a></p>
-<iframe width="420" height="315" src="https://youtu.be/>kCmOfRcmkN0">
-</iframe>
-
-		</main>
-		<footer>
 			© 2023 Lewis Campbell Technologies Ltd.
 		</footer>
 	</body>
