fixed navbar and footer

--- a/static/landing/index.html
+++ b/static/landing/index.html
@@ -1,6 +1,9 @@
 <div id="hero">
 	<h1>Software at the <span>edge</span> of the supply chain.</h1>
-	<div>
+	<p>Quaerat dolores dolorem esse fuga omnis quia. Omnis dignissimos quod qui.
+	Vitae eum voluptatum quibusdam dolores quisquam aperiam praesentium. Doloribus
+	et dolores perspiciatis nemo. Enim illo enim sunt impedit non earum.</p>
+	<div id="buttons">
 		<a id="cta" href="#contact">Get in touch</a>
 		<a id="scroll-prompt" href="#benefits">Find out more ▼</a>
 	</div>
