--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta charset="UTF-8">
-		<meta name="description" content=$description$>
+		<meta name="description" content="Want your app to work for customers in remote regions? Find out how my services can help your app perform offline and off the grid.">
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
@@ -36,15 +36,15 @@
 		/>
 		<meta 
 			property="og:title" 
-			content="Lewis Campbell Technologies"
+			content="website"
 		/>
 		<meta 
 			property="og:description" 
-			content="$description$"
+			content="Want your app to work for customers in remote regions? Find out how my services can help your app perform offline and off the grid."
 		/>
 		<meta
 			property="og:type"
-			content="$type$"
+			content="website"
 		/>
 		<title>Lewis Campbell Technologies</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -66,12 +66,16 @@
 			<span id="links">
 				<a href="/talks.html">Talks</a>
 				<a href="/projects.html">Projects</a>
+				<a href="/contact.html">Contact</a>
 			</span>
 		</nav>
 		<main>
 			<div id="hero">
 	<h1>Software at the <span>edge</span> of the supply chain.</h1>
-	<div>
+	<p>Quaerat dolores dolorem esse fuga omnis quia. Omnis dignissimos quod qui.
+	Vitae eum voluptatum quibusdam dolores quisquam aperiam praesentium. Doloribus
+	et dolores perspiciatis nemo. Enim illo enim sunt impedit non earum.</p>
+	<div id="buttons">
 		<a id="cta" href="#contact">Get in touch</a>
 		<a id="scroll-prompt" href="#benefits">Find out more ▼</a>
 	</div>
@@ -202,33 +206,39 @@
 
 		</main>
 		<footer>
-			<span>
+			<span id="socials">
 				<a
 					href="https://twitter.com/LewisCTech"
 					aria-label="Twitter"
 				>
 					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
+					Twitter
 				</a>
 				<a 
 					href="https://www.linkedin.com/in/lewisandrewcampbell"
 					aria-label="LinkedIn"
 				>
 					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+					LinkedIn
 				</a>
 				<a
 					href=https://www.youtube.com/@LewisCampbellTech
 					aria-label="YouTube"
 				>
 					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
+					YouTube
 				</a>
 				<a
 					href="https://github.com/LAC-Tech"
 					aria-label="GitHub"
 				>
 					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
+					GitHub
 				</a>
 			</span>
-			© 2023 Lewis Campbell Technologies Ltd.
+			<span id="copyright">
+				© 2023 Lewis Campbell Technologies Ltd.
+			</span>
 		</footer>
 	</body>
 </html>
