--- a/www/contact.html
+++ b/www/contact.html
@@ -28,7 +28,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta charset="UTF-8">
-		<meta name="description" content=$description$>
+		<meta name="description" content="Get in touch with Lewis Campbell Technologies for your network-resilient software needs.">
 		<!-- Open Graph tags for sharing links -->
 		<meta 
 			property="og:image" 
@@ -36,15 +36,15 @@
 		/>
 		<meta 
 			property="og:title" 
-			content="Lewis Campbell Technologies"
+			content="website"
 		/>
 		<meta 
 			property="og:description" 
-			content="$description$"
+			content="Get in touch with Lewis Campbell Technologies for your network-resilient software needs."
 		/>
 		<meta
 			property="og:type"
-			content="$type$"
+			content="website"
 		/>
 		<title>Contact</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
@@ -66,6 +66,7 @@
 			<span id="links">
 				<a href="/talks.html">Talks</a>
 				<a href="/projects.html">Projects</a>
+				<a href="/contact.html">Contact</a>
 			</span>
 		</nav>
 		<main>
@@ -77,33 +78,39 @@
 
 		</main>
 		<footer>
-			<span>
+			<span id="socials">
 				<a
 					href="https://twitter.com/LewisCTech"
 					aria-label="Twitter"
 				>
 					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
+					Twitter
 				</a>
 				<a 
 					href="https://www.linkedin.com/in/lewisandrewcampbell"
 					aria-label="LinkedIn"
 				>
 					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+					LinkedIn
 				</a>
 				<a
 					href=https://www.youtube.com/@LewisCampbellTech
 					aria-label="YouTube"
 				>
 					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
+					YouTube
 				</a>
 				<a
 					href="https://github.com/LAC-Tech"
 					aria-label="GitHub"
 				>
 					<img src="img/tabler-brand-github.svg" alt="GitHub Logo">
+					GitHub
 				</a>
 			</span>
-			© 2023 Lewis Campbell Technologies Ltd.
+			<span id="copyright">
+				© 2023 Lewis Campbell Technologies Ltd.
+			</span>
 		</footer>
 	</body>
 </html>
