--- a/www/projects.html
+++ b/www/projects.html
@@ -73,115 +73,13 @@
 			<h1>Projects</h1>
 <h2>Sync about it</h2>
 <p><a href="/sync.html">Try online</a></p>
-<p><a href="https://github.com/LAC-Tech/website/blob/master/www/crdt.js">Source Code</a></p>
+<p><a href="https://github.com/LAC-Tech/website/tree/master/spa/sync">Source Code</a></p>
 <p>Sync contains my implementations of CRDTs from the following papers:</p>
 <ul>
 <li>&quot;A comprehensive study of convergent and commutative replicated data types&quot; (Marc Shapiro, Nuno Preguiça, Carlos Baquero, and Marek Zawirski)</li>
 <li>&quot;An optimized conflict-free replicated set.&quot; (Annette Bieniusa, Marek Zawirski, Nuno Preguiça, Marc Shapiro, Carlos Baquero, Valter Balegas, and Sérgio Duarte)</li>
 </ul>
 <p>All CRDTs implemented show their internal state, and have all been extensively tested for associativity, commutativity and idempotence using property based testing.</p>
-<h2>Distributed System Papers</h2>
-<p>I&#39;m a firm believer in contiual education. I&#39;d be delighted to discuss any of the below!</p>
-<table>
-    <thead>
-        <tr> 
-            <th>Name</th>
-            <th>Understanding</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>
-                <i>An Optimized Conflict-Free Replicated Set</i>
-                <div>(Bieniusa, Zawirski, Preguiça, Shapiro, Baquero, Balegas, Duarte 2012)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="3" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Viewstamped Replication Revisited</i>
-                <div>(Liskov, Cowling 2012)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Conflict-Free replicated Relations for Multi-Synchronous Database Management at Edge</i>
-                <div>(Yu, Ignat 2020)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="1" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Why Logical Clocks Are Easy</i>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Logical Physical Clocks and Consistent Snapshots in Globally Distributed Systems</i>
-                <div>(Kulkarot, Demirbas, Madeppa, Avva, Leone 2014)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>A comprehensive study of Convergent and Commutative Replicated Data Types</i>
-                <div>(Shapiro, Preguiça, Baquero, Zawirski 2011)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Delta State Replicated Data Types</i>
-                <div>(Almeida, Shoker, Baquero 2018)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="1" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Detection of Mutual Inconsistency in Distributed Systems</i>
-                <div>(Parker, Popek, Rudisin, Stoughton, Walker, Walton, Chow, Edwards, Kiser, Kline 1983)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Time, Clocks, and the Ordering of Events in a Distributed System</i>
-                <div>(Lamport 1978)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <i>Timestamps in Message-Passing Systems That Preserve the Partial Ordering</i>
-                <div>(Fidge 1988)</div>
-            </td>
-            <td>
-                <meter min="0" max="3" value="2" />
-            </td>
-        </tr>
-    </tbody>
-</table>
-
 
 		</main>
 		<footer>
@@ -193,19 +91,19 @@
 					<img src="img/tabler-brand-twitter.svg" alt="Twitter Logo">
 					Twitter
 				</a>
-				<a 
-					href="https://www.linkedin.com/in/lewisandrewcampbell"
-					aria-label="LinkedIn"
-				>
-					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
-					LinkedIn
-				</a>
 				<a
 					href=https://www.youtube.com/@LewisCampbellTech
 					aria-label="YouTube"
 				>
 					<img src="img/tabler-brand-youtube.svg" alt="YouTube Logo">
 					YouTube
+				</a>
+				<a 
+					href="https://www.linkedin.com/in/lewisandrewcampbell"
+					aria-label="LinkedIn"
+				>
+					<img src="img/tabler-brand-linkedin.svg" alt="LinkedIn Logo">
+					LinkedIn
 				</a>
 				<a
 					href="https://github.com/LAC-Tech"
